tests/NormalTests/paczka1/fuzzy1/52392151.err
Error in line 8: mO8rr0o S@95 @8,@
Error in line 7: FyNs S983 142,1
Error in line 16: 0dHaIet1 S845 66,1
Error in line 6: S845 S195 2,1
Error in line 26: YZ3 S845 49,2
Error in line 27: Pvj S845 94,4
Error in line 22: mO8rr0o S195 78,4
Error in line 33: mO8rr0o A317 58,9
Error in line 39: azl0N S845 48,4
